--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
   	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-  	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC25SbLHR2F2WYnX7SxBDSv4PtDH0eSPn0"></script>
- 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+  	<script src="https://code.jquery.com/jquery-3.0.0.js"></script>
 </head>
 <body>
 	<header>
